mykube/jellyfin/jellyfin-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - env:
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: docker.io/jellyfin/jellyfin
        imagePullPolicy: IfNotPresent
        name: jellyfin
        ports:
        - containerPort: 8096
          protocol: TCP
        volumeMounts:
        - mountPath: /media
          name: media
          readOnly: True
        - mountPath: /config
          name: jellyfin-config
        - mountPath: /cache
          name: jellyfin-cache
      restartPolicy: Always
      volumes:
      - name: media
        hostPath: 
          path: /media/nicole
          type: Directory
      - name: jellyfin-config
        hostPath: 
          path: /home/matteo/ckad-workbench/mykube/jellyfin/config
          type: Directory
      - name: jellyfin-cache
        hostPath: 
          path: /home/matteo/ckad-workbench/mykube/jellyfin/cache
          type: Directory
